--- a/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/GeoQuiz/app/src/main/res/values/strings.xml
@@ -1,8 +1,15 @@
 <resources>
     <string name="app_name">GeoQuiz</string>
-    <string name="question_text">Canberra is the capital of Australia</string>
     <string name="true_button">True</string>
     <string name="false_button">False</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="next_button">Next</string>
+
+    <!--Questions-->
+    <string name="question_australia">Canberra is the capital of Australia</string>
+    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic</string>
+    <string name="question_mideast">The Suez Canal connects the Red Sea andd the Indian Ocean.</string>
+    <string name="question_africa">The source of the Nile River is in Egypt</string>
+    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake.</string>
 </resources>
